archive/applications/backbone/utility/keda/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: policy
spec:
  endpointSelector: {}
  ingress:
  - fromEntities:
    - host
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: tailscale
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kgateway
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: keda
